# GammaOSDistribution

./: .gitattributes  BUILD  README.md  WORKSPACE  cleanlargefiles.sh  cleargitlinks.sh  initializegitlfs.sh  portion_aa  portion_ab  portion_ac  portion_ad  portion_ae  portion_af  portion_ag  portion_ah  portion_ai  portion_aj  portion_ak  portion_al  portion_am  portion_an  portion_ao  portion_ap  portion_aq  portion_ar  portion_as  portion_at  upload.sh  uploadmissingfiles.sh
device/generic/vulkan-cereal/: Android.bp  CMakeLists.txt  METADATA  README.md  android.cmake  build-host.sh  gtestdownloadCMakeLists.txt.in
device/generic/vulkan-cereal/base/: AlignedBuf.h  AlignedBuf_unittest.cpp  Android.bp  ArraySize.h  ArraySize_unittest.cpp  BufferQueue.h  BumpPool.h  CMakeLists.txt  Compiler.h  CompressingStream.cpp  CompressingStream.h  ConditionVariable.h  CppMacros.h  CpuTime.cpp  CpuTime.h  DecompressingStream.cpp  DecompressingStream.h  EintrWrapper.h  EntityManager.h  EnumFlags.h  FileUtils.cpp  FileUtils.h  FileUtils_unittest.cpp  FunctorThread.h  GLObjectCounter.cpp  GLObjectCounter.h  HybridComponentManager.h  HybridEntityManager.h  LayoutResolver.cpp  LayoutResolver_unittest.cpp  Lock.h  Lookup.h  MemStream.cpp  MemStream.h  MemoryTracker.cpp  MemoryTracker.h  MessageChannel.cpp  MessageChannel.h  MruCache.h  Optional.h  (+48 more)
device/generic/vulkan-cereal/base/msvc-posix-compat/: CMakeLists.txt
device/generic/vulkan-cereal/base/testing/: TestSystem.h  TestTempDir.h  file_io.cpp  file_io.h
device/generic/vulkan-cereal/fake-android-guest/: CMakeLists.txt
device/generic/vulkan-cereal/fake-android-guest/androidImpl/: AndroidBufferQueue.cpp  AndroidWindow.cpp  Ashmem.cpp  Properties.cpp  SurfaceFlinger.cpp  SurfaceFlinger.h  Vsync.cpp  trace-host.cpp  vulkanhal_unittest.cpp
device/generic/vulkan-cereal/fake-android-guest/libvulkan/: debug_report.cpp  driver.cpp  layers_extensions.cpp
device/generic/vulkan-cereal/fake-android-guest/ui/: GraphicBuffer.h
device/generic/vulkan-cereal/host-common/: AddressSpaceService.h  Android.bp  AndroidAgentFactory.cpp  AndroidAgentFactory.h  AndroidPipe.cpp  AndroidPipe.h  CMakeLists.txt  DeviceContextRunner.h  DmaMap.cpp  DmaMap.h  FeatureControl.h  FeatureControlDefGuest.h  FeatureControlDefHost.h  GoldfishDma.cpp  GoldfishDma.h  GoldfishSyncCommandQueue.cpp  GoldfishSyncCommandQueue.h  H264PingInfoParser.cpp  H264PingInfoParser.h  HostAddressSpace_unittest.cpp  HostGoldfishPipe.cpp  HostGoldfishPipe.h  HostGoldfishPipe_unittest.cpp  HostmemIdMapping.cpp  HostmemIdMapping.h  HostmemIdMapping_unittest.cpp  MediaCodec.h  MediaCudaDriverHelper.cpp  MediaCudaDriverHelper.h  MediaCudaUtils.cpp  MediaCudaUtils.h  MediaCudaVideoHelper.cpp  MediaCudaVideoHelper.h  MediaFfmpegVideoHelper.cpp  MediaFfmpegVideoHelper.h  MediaH264Decoder.h  MediaH264DecoderCuvid.cpp  MediaH264DecoderCuvid.h  MediaH264DecoderDefault.cpp  MediaH264DecoderDefault.h  (+80 more)
device/generic/vulkan-cereal/host-common/avd/: hw-config-defs.h  hw-config.cpp  hw-config.h  hw-lcd.h  info.cpp  info.h  keys.h  scanner.c  scanner.h  util.c  util.h  util_wrapper_unittest.cpp
device/generic/vulkan-cereal/host-common/opengl/: EmuglBackendList.cpp  EmuglBackendList.h  EmuglBackendList_unittest.cpp  EmuglBackendScanner.cpp  EmuglBackendScanner.h  EmuglBackendScanner_unittest.cpp  GLProcessPipe.cpp  GLProcessPipe.h  GpuFrameBridge.cpp  GpuFrameBridge.h  NativeGpuInfo.h  NativeGpuInfo_darwin.cpp  NativeGpuInfo_linux.cpp  NativeGpuInfo_windows.cpp  OpenglEsPipe.cpp  OpenglEsPipe.h  emugl_config.cpp  emugl_config.h  emugl_config_unittest.cpp  gpuinfo.cpp  gpuinfo.h  gpuinfo_unittest.cpp  logger.cpp  logger.h
device/generic/vulkan-cereal/host-common/testing/: HostAddressSpace.cpp  MockAndroidAgentFactory.cpp  MockAndroidAgentFactory.h  MockAndroidEmulatorWindowAgent.cpp  MockAndroidMultiDisplayAgent.cpp  MockAndroidVmOperations.cpp
device/generic/vulkan-cereal/protocols/: CMakeLists.txt
device/generic/vulkan-cereal/protocols/generic-apigen/: ApiGen.cpp  CMakeLists.txt  EntryPoint.cpp
device/generic/vulkan-cereal/scripts/: generate-apigen-sources.sh  generate-vulkan-sources.sh
device/generic/vulkan-cereal/snapshot/: Android.bp  CMakeLists.txt  LazySnapshotObj.h  TextureLoader.cpp  TextureLoader.h  TextureSaver.cpp  TextureSaver.h  common.h  interface.h
device/generic/vulkan-cereal/stream-servers/: Android.bp  CMakeLists.txt  ChannelStream.cpp  ChannelStream.h  ColorBuffer.cpp  ColorBuffer.h  CompositorVk.cpp  CompositorVk.h  DisplayVk.cpp  DisplayVk.h  FbConfig.cpp  FenceSync.cpp  FenceSync.h  FrameBuffer.cpp  FrameBuffer.h  GLESVersionDetector.cpp  GfxStreamAgents.cpp  GfxStreamAgents.h  GfxStreamBackend.cpp  GfxStreamBackend.h  IOStream.h  NativeSubWindow.h  NativeSubWindow_android.cpp  NativeSubWindow_win32.cpp  NativeSubWindow_x11.cpp  PostCommands.h  PostWorker.cpp  PostWorker.h  ReadBuffer.h  ReadbackWorker.cpp  ReadbackWorker.h  RenderChannel.h  RenderChannelImpl.cpp  RenderChannelImpl.h  RenderContext.cpp  RenderContext.h  RenderControl.cpp  RenderControl.h  RenderLib.h  RenderLibImpl.cpp  (+32 more)
device/generic/vulkan-cereal/stream-servers/OpenGLESDispatch/: Android.bp  CMakeLists.txt  EGLDispatch.cpp  GLESv1Dispatch.cpp  GLESv2Dispatch.cpp  OpenGLDispatchLoader.cpp  (+2 more)
device/generic/vulkan-cereal/testenvs/: mock-android-graphics  mock-android-graphics-toplevel
hardware/qcom-caf/wlan/cld80211-lib/: Android.mk  Makefile.am  cld80211-lib.pc.in  cld80211_lib.c  cld80211_lib.h  configure.ac
prebuilts/clang/host/linux-x86/: Android.bp  Android.mk  BUILD.bazel  OWNERS  README.md  cc_toolchain_config.bzl
prebuilts/sdk/: Android.bp  BUILD.bazel  METADATA
prebuilts/sdk/current/: Android.bp  androidx-README.md
prebuilts/sdk/current/androidx/: Android.bp  JavaPlugins.bp
prebuilts/sdk/current/androidx-legacy/: Android.bp
prebuilts/sdk/current/optional/: Android.bp
prebuilts/sdk/current/support/: Android.bp
prebuilts/sdk/renderscript/: Android.bp
prebuilts/sdk/tools/: Android.bp  Android.mk  BUILD.bazel
prebuilts/sdk/update_prebuilts/: update_prebuilts.py
(+29510 files in other folders)
