exports_files(
    [
        "linux/bin/aapt",
        "linux/bin/aapt2",
        "linux/lib/dx.jar",
        "linux/bin/dx",
        "linux/bin/aidl",
        "linux/bin/zipalign",
        "mainDexClasses.rules",
        "linux/lib/apksigner.jar",
    ],
    visibility = ["//prebuilts/sdk:__pkg__"],
)
